PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_WAC_Change__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Country Head</fullName>
                </value>
                <value>
                    <fullName>Country Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Medicaid_release__c</fullName>
        <label>Medicaid release / (Impact)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_hit__c</fullName>
        <label>PHS Benefit / (Impact)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Increase__c</fullName>
        <label>Sales increase / (Impact)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Net_Benefit_Impact__c</fullName>
        <label>Total Net Benefit/ (Impact)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Net_Benefit__c</fullName>
        <formula>Phoenix_Sales_Increase__c  +  Phoenix_Medicaid_release__c  +  Phoenix_PHS_hit__c  +  Phoenix_WAC_finance_impact__c  +  Working_capital_benefit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Benefit / (Impact)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Change_Name__c</fullName>
        <label>WAC Change Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Submitted_Date__c</fullName>
        <label>WAC Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_finance_impact__c</fullName>
        <label>WAC finance Benefit / (Impact)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for Product Family Lookup</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>WAC Changes</relationshipLabel>
        <relationshipName>WAC_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Working_capital_benefit__c</fullName>
        <label>Working capital Benefit / (Impact)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>WAC Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_WAC_Change_Name__c</columns>
        <columns>Phoenix_Effective_Date__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Product_Family__c</columns>
        <columns>Phoenix_Sales_Increase__c</columns>
        <columns>Phoenix_Medicaid_release__c</columns>
        <columns>Phoenix_PHS_hit__c</columns>
        <columns>Phoenix_WAC_finance_impact__c</columns>
        <columns>Working_capital_benefit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_WAC_Change_Name__c</columns>
        <columns>Phoenix_Effective_Date__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Product_Family__c</columns>
        <columns>Phoenix_Sales_Increase__c</columns>
        <columns>Phoenix_Medicaid_release__c</columns>
        <columns>Phoenix_PHS_hit__c</columns>
        <columns>Phoenix_WAC_finance_impact__c</columns>
        <columns>Working_capital_benefit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Closed,Closed-Draft,Contracts Rejected,Marketing Head Rejected</value>
        </filters>
        <label>Closed</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_WAC_Change_Name__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Product_Family__c</columns>
        <columns>Phoenix_Sales_Increase__c</columns>
        <columns>Phoenix_Medicaid_release__c</columns>
        <columns>Phoenix_PHS_hit__c</columns>
        <columns>Phoenix_WAC_finance_impact__c</columns>
        <columns>Working_capital_benefit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Phoenix_Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed-Draft,Contracts Rejected,Marketing Head Rejected</value>
        </filters>
        <label>Open</label>
    </listViews>
    <nameField>
        <displayFormat>WAC Change-{000000}</displayFormat>
        <label>WAC Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>